Use separate XML files for views

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -1,9 +1,10 @@
 [tryton]
-version=2.6.0
+version=2.8.0
 depends:
     ir
     res
     esale_product
+    magento
 xml:
     magento_core.xml
     product.xml
