Import Attribute Options

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -4,6 +4,7 @@ depends:
     base_external_mapping
     esale_product
     magento
+    product_attribute
 xml:
     magento_core.xml
     product.xml
