--- a/tryton.cfg
+++ b/tryton.cfg
@@ -5,6 +5,7 @@ depends:
     esale_product
     magento
     product_attribute
+    product_attachments
 xml:
     magento_core.xml
     product.xml
