Add product special price extra depends

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -6,6 +6,8 @@ depends:
     magento
     product_attribute
     product_attachments
+extras_depend:
+    product_special_price
 xml:
     magento_core.xml
     product.xml
