Add Magento DATA from XML in base external mapping

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -6,9 +6,11 @@ depends:
     magento
     product_attribute
     product_attachments
+    product_special_price
 extras_depend:
     product_special_price
 xml:
     magento_core.xml
+    magento_data.xml
     product.xml
     shop.xml
