Import products. Search code with base_code (template) Start to work with product configurables

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -6,6 +6,7 @@ depends:
     magento
     product_attribute
     product_attachments
+    product_base_code
     product_special_price
 extras_depend:
     product_special_price
