--- a/tryton.cfg
+++ b/tryton.cfg
@@ -4,7 +4,7 @@ depends:
     ir
     esale_product
     magento
-    product_attribute
+    product_template_attribute
     product_attachments
     product_base_code
     product_special_price
